# MoveNet_test

./: README.md  pyproject.toml
movenet/: helpers.py  static.ipynb  test.ipynb  test.py
